# django-aux-columns

./: LICENSE  README.md  setup.cfg
django_aux_columns/: __init__.py  columns.py
example/: z_adhoc.ipynb
example/example/: settings.py
example/main/: models.py
tests/helpers/: __init__.py  forms.py
