[metadata]
name = django-aux-columns
version = 0.1.0
description = Additional useful columns to supplement django-tables2
long_description = file: README.md
url = https://github.com/JordanHyatt
author = Jordan Hyatt
author_email = jordan.hyatt@auxiliasystems.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
    Django >= 3.0  
    django-tables2 >= 2.0
    pandas >= 1.0
    django-pandas >= 0.6
